k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthconnect-ingress
  namespace: healthconnect
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"

spec:
  ingressClassName: nginx
  rules:
    - host: healthconnect.local
      http:
        paths:

          - path: /patients
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 80

          - path: /lab
            pathType: Prefix
            backend:
              service:
                name: lab-service
                port:
                  number: 80

          - path: /audit
            pathType: Prefix
            backend:
              service:
                name: audit-service
                port:
                  number: 80

          - path: /monitor
            pathType: Prefix
            backend:
              service:
                name: monitoring-service
                port:
                  number: 80
            
          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 80
